style: apply spotless java formatting